# swagger.yaml
@@ -149,6 +149,9 @@ components:
         name:
           type: string
           description: Name of the brainrot
+        image:
+          type: string
+          description: Image identifier or path
         baseHP:
           type: integer
           description: Base health points
@@ -170,6 +173,9 @@ components:
         name:
           type: string
           description: Name of the brainrot
+        image:
+          type: string
+          description: Image identifier or path
         baseHP:
           type: integer
           description: Base health points
